1.3.0 bump (#152)
1.3.0-pr